--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:theme="@style/Theme.WMC">
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="true"
             android:label="@string/app_name" >
+            //키보드 입력될때 하단바 같이 올라오는것 수정위한 코드 (windowSoft ~)
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
