--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,15 @@
             android:windowSoftInputMode="adjustPan"
             android:exported="true"
             android:label="@string/app_name" > <!--키보드 입력될때 하단바 같이 올라오는것 수정위한 코드(winSoftInputMode) -->
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FindpwActivity" />
+        <activity android:name=".FindidActivity" />
+        <activity android:name=".LoginAcivity" />
+        <activity android:name=".SignupActivity" />
     </application>
 
 </manifest>
